...
      description: 'Self-repairing nanobot hull. Counts everything in threes.',
      startingCards: ['laser_1', 'laser_1', 'shield_1', 'cargo_pod_1'],
      startingHold: [],
    ),
  ),
  al(
    name: 'Ál',
    traits: 'Curious, adventurous, aquatic',
    blurb:
        'Tentacled explorers from Úlamora who have survived by poking and '
        'prodding their way through everything.',
    home: Sys.orcha,
    humansLikeThem: 1,
...
      startingCards: ['laser_1', 'laser_1', 'fabricator_1', 'cargo_pod_1'],
      startingHold: ['feedstock_1'],
      startingColony: ['habitat_2', 'hospital_1'],
    ),
  ),
  bhrun(
    name: 'Bhrun',
    traits: 'Slow, passive, unimportant',
    blurb:
        'Megafauna from the jungles of Bhrun-Gai. Nobody cares about them, '
        'and they have not noticed.',
    home: Sys.bhrunGai,
    humansLikeThem: 1,
...
