...
                ),
              ],
            ),
          ],
          bottom: TabBar(
            tabs: [
              if (docked) ...const [Tab(text: 'Buy'), Tab(text: 'Sell')] else
                Tab(text: brawl.inHell ? 'Hell' : 'Event'),
              const Tab(text: 'Ship'),
            ],
          ),
        ),
        bottomNavigationBar: docked
...
